--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
 
 <body>
 
-	<header>
-		<h1>Name</h1>
-		<nav>
-			<ul id="menu">
-				<li><a href="#">Home</a></li>
-				<li><a href="#">Contact</a></li>
-			</ul>
-		</nav>
-	</header>
+<header>
+	<h1>Joey Thinkful</h1>
+	<nav>
+		<ul id="menu">
+			<li><a href="#">Home</a></li>
+			<li><a href="#">Contact</a></li>
+		</ul>
+	</nav>
+</header>
 </body>
 
 </html>
